--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blear.utils.image",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "image utils",
   "scripts": {
     "live": "browser-sync start --config bs-config.js",
@@ -35,12 +35,12 @@
   "bugs": {
     "url": "https://github.com/blearjs/blear.utils.image/issues"
   },
-  "dependencies": {},
-  "peerDependencies": {
+  "dependencies": {
     "blear.utils.array": "1.x",
     "blear.utils.function": "1.x",
     "blear.utils.loader": "1.x"
   },
+  "peerDependencies": {},
   "devDependencies": {
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
